--- a/templates/smart-search.html
+++ b/templates/smart-search.html
@@ -6,7 +6,7 @@
 		<h3 align="center"> Read about some of the top podcasts below </h3>
 		<ul class="list-group">
 			{% for entry in top %}
-			<li class="list-group-item">{{entry.title}} - {{entry.description}}</li>
+			<li class="list-group-item"> <a href="{{entry.website}}">{{entry.title}}</a> - {{entry.description}}</li>
 			{% endfor %}
 		</ul>
 	</div>
