--- a/templates/smart-visual-search.html
+++ b/templates/smart-visual-search.html
@@ -6,7 +6,7 @@
 		<h3 align="center"> Read about some of the top podcasts below </h3>
 		<ul class="list-group">
 			{% for entry in top %}
-			<li class="list-group-item">{{entry.title}} - {{entry.description}}</li>
+			<li class="list-group-item"><a href="{{entry.website}}">{{entry.title}}</a> - {{entry.description}}</li>
 			{% endfor %}
 		</ul>
 	</div>
@@ -21,7 +21,7 @@
 
 		<ul class="list-group">
 			{% for podcast in search %}
-			<li class="list-group-item">{{podcast.title}} - {{podcast.description}}</li>
+			<li class="list-group-item"><a href="{{podcast.website}}">{{podcast.title}}</a> - {{podcast.description}}</li>
 			{% endfor %}
 		</ul>
 	</div>
