--- a/templates/home.html
+++ b/templates/home.html
@@ -9,18 +9,24 @@
 	  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 	</div>
 
-	<h2> Read about some of the top podcasts below </h2>
-		<ul class="list-group">
-			{% for entry in top %}
-			<li class="list-group-item">{{entry.title}} - {{entry.description}}</li>
-			{% endfor %}
-		</ul>
-		<br>
+	<h2 align="center"> Explore the topics of the podcasts </h2>
+			<div class="row">
+				{% for tag in tags %}
+			  <div class="col-sm-3" align="center">{{tag.tag}}</div>
+			  	{% endfor %}
+			  <div class="col-sm-3"></div>
+			  <div class="col-sm-3"></div>
+			  <div class="col-sm-3"></div>
+			</div>
 	<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 	
 	<style type="text/css">
 		h2 {
 			margin-left: 20px
+		}
+
+		.col-sm-3 {
+			font-size: 20px;
 		}
 
 		#myBtn {
