--- a/templates/data-visuals.html
+++ b/templates/data-visuals.html
@@ -6,5 +6,14 @@
 		<input type="text" name="search">
 		<input type="submit" name="Submit">
 	</form>
+	<br>
+	<br>
+	<br>
+	<form action="{{ url_for('subscriptions')}}" method="POST">
+		<label>Enter your login information to see your subscriptions</label><br>
+		<input type="text" name="username" placeholder="username">
+		<input type="password" name="password" placeholder="password">
+		<input type="submit" name="Enter">
+	</form>
 
 {% endblock %}
