--- a/templates/data-visuals.html
+++ b/templates/data-visuals.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<form action="{{ url_for('data_visuals_search')}}" method="POST">
+	<form action="{{ url_for('data_visuals_search')}}" method="POST" style="margin-left: 30px">
 		<label>Search for podcasts</label><br>
 		<input type="text" name="search">
 		<input type="submit" name="Submit">
@@ -9,7 +9,7 @@
 	<br>
 	<br>
 	<br>
-	<form action="{{ url_for('subscriptions')}}" method="POST">
+	<form action="{{ url_for('subscriptions')}}" method="POST" style="margin-left: 30px">
 		<label>Enter your login information to see your subscriptions</label><br>
 		<input type="text" name="username" placeholder="username">
 		<input type="password" name="password" placeholder="password">
