--- a/templates/smart-visual-search.html
+++ b/templates/smart-visual-search.html
@@ -11,7 +11,7 @@
 		</ul>
 	</div>
 	<div style="width: 50%; display: inline-block;">
-		<form action="{{ url_for('smart_visual_search')}}" method="POST">
+		<form action="{{ url_for('smart_visual_search')}}" method="POST" style="margin-left: 30px">
 			<label>Search for the top podcasts by genre</label><br>
 			<input type="text" name="search">
 			<input type="submit" name="Submit">
