--- a/templates/smart-sort.html
+++ b/templates/smart-sort.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<form action="{{ url_for('smart_sort_search')}}" method="POST" style="margin-left: 30px">
-		<label>Enter your login information to see recommendations</label><br>
+		<label>Enter your login information to see which podcasts you should listen to first</label><br>
 		<input type="text" name="username" placeholder="username">
 		<input type="password" name="password" placeholder="password">
 		<input type="submit" name="Enter">
