--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 	  <p class="lead">Check out the navigation bar to get more information on various podcasts! Each one provides different functionalities.</p>
 	  <hr class="my-4">
 	  <p>Capital One Software Engineering Summit Challenge - Abhishek Shinde</p>
-	  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+	  <a class="btn btn-primary btn-lg" href="https://github.com/abhishekshinde21/CapOneSWE18" role="button">Learn more</a>
 	</div>
 
 	<h2 align="center"> Explore the topics of the podcasts </h2>
